--- a/FisrtMVCApp/Views/HelloWorld/Index.cshtml
+++ b/FisrtMVCApp/Views/HelloWorld/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model DogViewModel
+﻿@model List<DogViewModel>
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -6,5 +6,10 @@
 }
 <h1>Hello World bro </h1>
 <p>this is the index page of the helloWorld Controller</p>
-<h4>A dog name @Model.Name say hello </h4>
-<h4>@Model.Name is @Model.Age years old</h4>
+
+<ul>
+    @foreach(var dog in Model)
+    {
+        <li>@dog.Name (@dog.Age) </li>
+    }
+</ul>
