--- a/RazorPizzeria/Pages/Pizza.cshtml
+++ b/RazorPizzeria/Pages/Pizza.cshtml
@@ -26,11 +26,22 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 mb-5">
-                <img src="" class="w-100" asp-append-version="true" />
-                <a class="btn btn-primary mt-1"  asp-area="" asp-page="Checkout/Checkout">Get this pizza!</a>
+            @foreach (var pizza in Model.fakePizzaDB)
+            {
+                var imagePath = "~/images/Pizzas/" + (pizza.ImageTitle + ".jpg");
 
-            </div>
+
+                <div class="col-4 mb-5">
+                    <img src="@imagePath" class="w-100" asp-append-version="true" />
+
+                    <a class="btn btn-primary mt-1" asp-area="" asp-page="Checkout/Checkout" asp-route-ImageTitle="@pizza.ImageTitle"
+                    asp-route-PizzaPrice="@pizza.FinalPrice">Get this pizza!</a>
+                    <br />
+                </div>
+            }
+
+
+
         </div>
     </div>
 </div>
